--- a/relatorio/relatorio.tex
+++ b/relatorio/relatorio.tex
@@ -265,7 +265,6 @@
 \input{chapters/metodo.tex}
 \input{chapters/resultados.tex}
 \input{chapters/discussao.tex}
-
-\bibliography{bib/relatorio.bib}
+\input{chapters/consultas.tex}
 
 \end{document}
